<resources>
    <string name="app_name">VeterinariaGomezA</string>
    <string name="hint_nombre">Nombre:</string>
    <string name="hint_telefono">Telefono:</string>
    <string name="hint_correo_electronico">Correo electronico:</string>
    <string name="hint_raza">Raza:</string>
    <string name="hint_edad">Edad:</string>
    <string name="hint_tamano">Tamaño:</string>
    <string name="hint_datosmedicos">Datos Medicos:</string>
    <string name="btn_guarda">Guardar registro</string>
    <string name="menu_nuevo">Nuevo registro</string>
</resources>