<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewNombre"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_edad" />

        <EditText
            android:id="@+id/txtedad1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/viewDatosmedicos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_datosmedicos" />

        <EditText
            android:id="@+id/txtDatosMedicos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtraza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_raza" />

        <EditText
            android:id="@+id/txtRazaed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/viewTamano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_tamano" />

        <EditText
            android:id="@+id/txttamano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_guarda"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>