<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:padding="2dp"
            app:srcCompat="@drawable/ic_contacto"
            tools:srcCompat="@drawable/ic_contacto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="253dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_nombre" />

            <TextView
                android:id="@+id/viewNombre"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_edad" />

            <TextView
                android:id="@+id/viewEdad"
                android:layout_width="29dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingRight="5dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_raza" />

            <TextView
                android:id="@+id/viewRaza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_datosmedicos" />

                <TextView
                    android:id="@+id/viewDatosmedicos"
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:paddingLeft="8dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_tamano" />

                <TextView
                    android:id="@+id/viewtamano"
                    android:layout_width="79dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>